# McFACTS

./: .gitignore  IOdocumentation.txt  LICENSE.txt  MANIFEST.in  Makefile  O3-L1-C01_CLEAN_SUB60HZ-1262141640.0_sensitivity_strain_asd.txt  README.md  inputs.txt  mcfacts_sim.py  modelzchoicez.txt  pyproject.toml  setup.py  test1.py  test1_iterate.py  test2.py
docs/: conf.py  requirements.txt
docs/source/: cite.rst  conf.py  contribute.rst  index.rst  installation.rst  modules.rst
docs/source/_templates/: custom-module-template.rst
inputs/: ReadInputs.py  inputs.npy  model_choice.txt  sirko_goodman_aspect_ratio.txt  thompson_etal_surface_density.txt
misc/: retro_mig.py
objects/: agnobject.py
outputs/: mergerfile.py
physics/accretion/eddington/: changebhmass.py
physics/accretion/torque/: changebh.py
physics/binary/evolve/: evolve.py
physics/binary/formation/: add_new_binary.py  hillsphere.py
physics/binary/harden/: baruteau11.py
physics/binary/merge/: chieff.py  tgw.py  tichy08.py
physics/dynamics/: dynamics.py
physics/eccentricity/: orbital_ecc.py
physics/feedback/hankla21/: feedback_hankla21.py
physics/migration/type1/: type1.py
recipes/: model_choice.ini  model_choice_old.ini  p1_fig2.ini  p1_thompson.ini  p3_pAGN_off.ini  p3_pAGN_on.ini  pAGN_test.ini  paper1_fig1_MF.ini  paper1_fig2_MF2.ini  paper1_fig3_r2.ini  paper1_fig4_circ.ini  paper1_fig5_ecc_uni.ini  paper1_fig_disk_dyn_on_sph_off.ini  paper1_fig_dyn_on.ini  paper1_fig_thompson.ini  paper1_fig_thompson_dyn_on.ini  paper1_fig_tqm_feed_off.ini  paper_fig_sg_dyn_on_5Myr.ini  paper_sg_2Myr_dyn_on.ini
scripts/: mcfacts_sim.py  plot_disk_properties.py  population_plots.py  retro_test_plots.py  stars_plots.py  test_dist.py  vera_mstar_bins.py  vera_mstar_bins_opacity.py  vera_plots.py
scripts/tests/: crude_retro_evol_test.py  retro_mig_test.py  tests.py
setup/: setupdiskblackholes.py
src/mcfacts/: __init__.py  constants.py  mcfacts_random_state.py
src/mcfacts/inputs/: ReadInputs.py  __init__.py  test_ReadInputs.py
src/mcfacts/inputs/data/: model_choice.ini  sirko_goodman_opacity.txt  sirko_goodman_surface_density.txt  thompson_etal_aspect_ratio.txt  thompson_etal_opacity.txt
src/mcfacts/objects/: __init__.py  agnobject.py
src/mcfacts/outputs/: __init__.py  mcfacts_batch_object.py  mcfacts_handler.py  mergerfile.py  plot_mcfacts_handler_quantities.py
src/mcfacts/physics/: __init__.py  accretion.py  disk_capture.py  dynamics.py  eccentricity.py  emri.py  feedback.py  gw.py  migration.py  point_masses.py
src/mcfacts/physics/accretion/eddington/: changebhmass.py  (+1 more)
src/mcfacts/physics/binary/: __init__.py  evolve.py  formation.py  merge.py
src/mcfacts/physics/disk_capture/: capture.py  capture_inc_damp.py  crude_retro_evol.py
src/mcfacts/physics/dynamics/: dynamics.py
src/mcfacts/physics/eccentricity/: orbital_ecc.py  retro_ecc.py
src/mcfacts/setup/: __init__.py  diskstars_hillspheremergers.py  initializediskstars.py  setupdiskblackholes.py  setupdiskstars.py
src/mcfacts/tests/: crude_retro_evol_test.py  retro_mig_test.py  tests.py
src/mcfacts/vis/: LISA.py  __init__.py  mcfacts_figures.mplstyle  plotting.py  population_plots.py  styles.py
test/: test_ReadInputs.py
tests/inputs/: test_ReadInputs.py
vis/: population_plots.py
(+14 files in other folders)
